--- a/R/05_analysis_1.qmd
+++ b/R/05_analysis_1.qmd
@@ -6,7 +6,11 @@ format:
 editor: visual
 ---
 
+# Survival Analysis
+
 ## Loading packages
+
+In this section, we load necessary R packages for conducting survival analysis. These packages include `tidyverse`, `survival`, `broom`, `forestplot`, and `survminer`. These packages provide functions and tools for data manipulation, survival analysis, model fitting, and visualization.
 
 ```{r}
 library(tidyverse)
@@ -18,6 +22,8 @@ library(survminer)
 
 ## Loading the data
 
+We load the augmented dataset from "03_dat_aug.tsv" for conducting survival analysis. The dataset is read and converted to a data frame.
+
 ```{r}
 TCGA_aug <- read_tsv("./../data/03_dat_aug.tsv", show_col_types = FALSE) %>%
   as.data.frame()
@@ -25,13 +31,13 @@ TCGA_aug <- read_tsv("./../data/03_dat_aug.tsv", show_col_types = FALSE) %>%
 
 ## **Create the Survival Object**
 
-First, ensure that the dataset (**`TCGA_aug`**) has the necessary variables for survival analysis. Typically, we need:
+Before performing survival analysis, we need to ensure that the dataset contains the necessary variables for such analysis:
 
 -   A time-to-event variable: This could be the **`OS.time`** or **`DSS.time`** in the dataset, representing the time until the event (death) occurs.
 
 -   An event indicator: This could be the **`OS`** or **`DSS`** variable, indicating whether the event (death) has occurred (1) or not (0/censored).
 
-Create a **`Surv`** object, which is a special type of object used by the survival package:
+Create a **`Surv`** object, a special data structure used by the survival package, to store this time-to-event and event indicator information.
 
 ```{r}
 
@@ -46,7 +52,7 @@ surv_obj <- Surv(time = TCGA_aug$OS.time, event = TCGA_aug$OS)
 
 ## **Fit the cox proportional hazards model**
 
-Fit the model using the **`coxph`** function. Select predictors based on the understanding of the data and previous analyses.
+We fit a Cox proportional hazards model to the data using the `coxph` function. This model examines the impact of various predictors (such as cancer type, age at diagnosis, gender, and race) on survival. The "strata" function is used to account for different cancer types.
 
 ```{r}
 # Fit a Cox proportional hazards model
@@ -56,7 +62,7 @@ cox_model <- coxph(surv_obj ~ strata(cancer_type) + age_diagnosis +
 
 ## Model summary
 
-Inspect the model output to understand the impact of predictors:
+We generate a summary of the Cox proportional hazards model to understand the statistical significance and impact of each predictor variable on survival.
 
 ```{r}
 summary(cox_model)
@@ -64,7 +70,7 @@ summary(cox_model)
 
 ## **Checking Proportional Hazards Assumption**
 
-The Cox model assumes that the ratio of hazards (risk) is constant over time (proportional hazards). This assumption should be checked:
+The Cox proportional hazards model assumes that the hazard ratios remain constant over time (proportional hazards assumption). We use the `cox.zph` function to check this assumption.
 
 ```{r}
 # Checking Proportional Hazards assumption
@@ -74,7 +80,7 @@ cox.zph(cox_model)
 
 ## **Visualizing the Results**
 
-Use the **`ggplot2`** package to visualize the results, such as plotting the estimated survival curves:
+We use the **`ggplot2`** package to visualize the results of the survival analysis. This includes plotting the estimated survival curves based on the fitted model.
 
 ```{r}
 # Survival plot
@@ -91,6 +97,10 @@ survival_plot <- ggsurvplot(fit_surv, data = TCGA_aug, ggtheme = theme_gray(),
 ggsave("./../results/05_analysis_1/05_survival_plot.png", survival_plot$plot, width = 10, height = 6)
 
 ```
+
+##  Hazard Ratio plot
+
+We fit a Cox proportional hazards model without stratification and create a hazard ratio plot to visualize the impact of predictor variables on survival. The `ggforest` function is used for this purpose.
 
 ```{r}
 library(tidyverse)
