--- a/R/03_augment.qmd
+++ b/R/03_augment.qmd
@@ -6,7 +6,11 @@ format:
 editor: visual
 ---
 
+# Augmentation
+
 ## Loading packages and data
+
+In this section, we load the necessary R packages, specifically the "tidyverse," which includes various data manipulation and visualization tools. We also read the cleaned dataset from "02_dat_clean.tsv".
 
 ```{r}
 #| label: 03-01
@@ -24,6 +28,8 @@ TCGA_clean <- read_tsv("../data/02_dat_clean.tsv", show_col_types = FALSE)
 ## 
 
 ## Adding age at last follow-up and disease duration
+
+We calculate two new variables, "age_at_last_followup_years" and "disease_duration_years," based on information from the cleaned dataset. These variables provide insights into the patients' ages at their last follow-up and the duration of their disease, accounting for vital status (alive or deceased).
 
 ```{r}
 #| label: 03-03
@@ -50,6 +56,8 @@ TCGA_aug <- TCGA_clean %>%
 
 ## Adding categorical age groups
 
+We create categorical age groups based on the "age_diagnosis" variable, categorizing patients into age brackets such as "\<18," "18-29," "30-39," and so on.
+
 ```{r}
 #| label: 03-04
 
@@ -69,6 +77,8 @@ TCGA_aug <- TCGA_aug |>
 ```
 
 ## Adding stage groups
+
+We create broader groupings for pathologic stages, considering the "pathologic_stage" and "clinical_stage" variables. A mapping function, "map_stage," is used to determine the stage groups, taking into account various stage categories and special values such as "\[Discrepancy\]," "\[Not Applicable\]," "\[Not Available\]," and "\[Unknown\]."
 
 ```{r}
 #| label: 03-05
@@ -106,6 +116,8 @@ TCGA_aug <- TCGA_aug |>
 
 ## Creating subset of data
 
+A subset of the data is created, focusing on the top 6 cancer types based on their frequency in the dataset. This subset allows for more targeted analysis and visualization.
+
 ```{r}
 # Create a subset of your data with the top 6 cancer types
 top_cancer_types <- TCGA_clean %>%
@@ -119,7 +131,9 @@ TCGA_aug <- TCGA_aug %>%
 
 ```
 
-## Saving data
+## Saving the data
+
+The augmented dataset is saved as "03_dat_aug.tsv" for further analysis and visualization.
 
 ```{r}
 #| label: 03-06
