--- a/doc/presentation.qmd
+++ b/doc/presentation.qmd
@@ -11,18 +11,18 @@ editor: visual
 ## Introduction to TCGA Pan-Cancer Dataset
 
 -   The Cancer Genome Atlas (TCGA)
--   Establishing coordinated effort to characterize molecular events in primary cancers 
+-   Establishing coordinated effort to characterize molecular events in primary cancers
     -   Collection of clinicopathologic annotation data along with multi-platform molecular profiles of more than 11,000 human tumors across 33 different cancer type
 
 ::: fragment
--   Our data is composed of the 6 cancer types with most patients included 
+-   Our data is composed of the 6 cancer types with most patients included
 :::
 
 -   Significance of the Pan-Cancer dataset in cancer genomics research
--   Pan-cancer dataset allows for simultaneous analysis of genomic data across a diverse range of cancer types  
+-   Pan-cancer dataset allows for simultaneous analysis of genomic data across a diverse range of cancer types
 
 ::: fragment
--   Dataset is crucial for discovering shared molecular features, potential biomarkers and theurapeutic targets 
+-   Dataset is crucial for discovering shared molecular features, potential biomarkers and theurapeutic targets
 :::
 
 ::: fragment
@@ -36,11 +36,11 @@ editor: visual
 :::
 
 ::: fragment
--   This dataset facilitates a nuanced understanding of molecular intricacies of cancer 
+-   This dataset facilitates a nuanced understanding of molecular intricacies of cancer
 :::
 
 ::: fragment
--   Data set helps allowing identification of patterns and shared characteristics among different cancer types  
+-   Data set helps allowing identification of patterns and shared characteristics among different cancer types\
 :::
 
 ## Project Aim and Focus
@@ -51,14 +51,14 @@ editor: visual
 -   Explore and understand factors influencing survival outcomes within the TCGA dataset
 :::
 
--  Cox proportional hazards models to gain insights into cancer prognosis
+-   Cox proportional hazards models to gain insights into cancer prognosis
 
 ::: fragment
 -   Cox proportional hazard model used in survival analysis to assess impact of covarities
 :::
 
 ::: fragment
--   The Cox proportional hazard model was used for understanding the factors influencing survival outcomes of patients in the 6 biggest cancer groups we have choosen in our project 
+-   The Cox proportional hazard model was used for understanding the factors influencing survival outcomes of patients in the 6 biggest cancer groups we have choosen in our project
 :::
 
 ## Data Acquisition and Cleaning
